--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.7",
+    "@supabase/supabase-js": "^2.40.0",
+    "@tanstack/react-query": "^5.28.9",
+    "@tanstack/react-query-devtools": "^5.28.10",
+    "@tanstack/react-table": "^8.15.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.1",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.2",
-    "styled-components": "^6.1.8"
+    "react-lottie": "^1.2.4",
+    "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
+    "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.7",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
