--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.4.4",
@@ -23,6 +24,7 @@
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
+    "serve": "^14.2.3",
     "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.7",
     "zustand": "^4.5.2"
