--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
+    "@railway/cli": "^3.11.0",
     "@react-pdf/renderer": "^3.4.4",
     "@supabase/supabase-js": "^2.40.0",
     "@tanstack/react-query": "^5.31.0",
